Patch the groupID so can be uploaded to local nexus

--- a/adapters/spi/servlet-adapter-spi/pom.xml
+++ b/adapters/spi/servlet-adapter-spi/pom.xml
@@ -26,6 +26,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>org.realityforge.org.keycloak</groupId>
     <artifactId>keycloak-servlet-adapter-spi</artifactId>
     <name>Keycloak Servlet Integration</name>
     <description/>
